WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
214026
Fix CrashTracer reported in PDFPlugin::ByteRangeRequest::maybeComplete
https://bugs.webkit.org/show_bug.cgi?id=214026
Summary
Fix CrashTracer reported in PDFPlugin::ByteRangeRequest::maybeComplete
Brady Eidson
Reported
2020-07-06 20:34:24 PDT
Fix CrashTracer reported in PDFPlugin::ByteRangeRequest::maybeComplete <
rdar://problem/64884982
>
Attachments
Patch
(2.24 KB, patch)
2020-07-06 20:39 PDT
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2020-07-06 20:39:54 PDT
Created
attachment 403658
[details]
Patch
EWS
Comment 2
2020-07-07 08:20:14 PDT
Committed
r264018
: <
https://trac.webkit.org/changeset/264018
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 403658
[details]
.
Alexey Proskuryakov
Comment 3
2020-07-07 18:32:09 PDT
Comment on
attachment 403658
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=403658&action=review
> Source/WebKit/WebProcess/Plugins/PDF/PDFPlugin.mm:1047 > + if (!plugin.m_data) > + return false;
What makes it OK to access m_data without synchronization? From the ChangeLog, it sounds like it's manipulated from another thread.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug