Fix CrashTracer reported in PDFPlugin::ByteRangeRequest::maybeComplete. <rdar://problem/64884982> and https://bugs.webkit.org/show_bug.cgi?id=214026

Reviewed by Tim Horton.

No new tests (CrashTracer with no reproduction)

Due to the racy-ness of how PDFKit calls us on the background thread vs. what might be
happening with the main thread, sometimes the main thread is asked to handle a data
request either:
- Before m_data is allocated
  or
- After it is deallocated

In either case it's okay to just not handle it.

Despite understanding how to reproduce in theory, writing a test case has been elusive.

* WebProcess/Plugins/PDF/PDFPlugin.mm:
(WebKit::PDFPlugin::ByteRangeRequest::maybeComplete): Null check m_data before doing anything with it.


Canonical link: https://commits.webkit.org/226836@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264018 268f45cc-cd09-0410-ab3c-d52691b4dbfc